# Fleecy-Cloud

./: .gitignore  .gitmodules  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: backend.yml  frontend.yml
asset/: cloud_price_AWS.csv  cloud_price_GCP.csv  latency_results.csv
backend/: Dockerfile  env.example  go.mod  go.sum  main.go
backend/config/: database.go
backend/db/: schema.sql
backend/handlers/: aggregator_handler.go  auth.go  clouds.go  federated_learning_handler.go  handlers.go  participant_handler.go  ssh_keypair_handler.go  virtual_machine_handler.go
backend/handlers/templates/: client_app.py  pyproject.toml  server_app.py  task.py
backend/initialization/: app_init.go
backend/middlewares/: auth_middleware.go
backend/models/: aggregator.go  cloud_connection.go  cloud_latency.go  cloud_price.go  estimate.go  federated_learning.go  input.go  instances.go  participant.go  participant_federated_learning.go  provider.go  refresh_token.go  region.go  ssh_keypair.go  user.go  virtual_machine.go
backend/repository/: aggregator_repository.go  cloud_latency.go  cloud_price.go  cloud_repository.go  federated_learning_repository.go  participant_repository.go  provider_repository.go  (+5 more)
flower-demo/: pyproject.toml
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  test_input.json
participant-setting/: README.md
prometheus/: prometheus.yml
simulator/: .dockerignore  Dockerfile  analyze_results.py  client.py  data_loader.py  docker-compose.yml  model.py  requirements.txt  server.py
(+166 files in other folders)
